--- a/.vscode-linux.settings.json
+++ b/.vscode-linux.settings.json
@@ -1,4 +1,7 @@
 {
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "breadcrumbs.enabled": false,
   "editor.acceptSuggestionOnCommitCharacter": false,
   "editor.acceptSuggestionOnEnter": "smart",
@@ -8,14 +11,15 @@
   "editor.fontSize": 16,
   "editor.formatOnSave": true,
   "editor.glyphMargin": false,
+  "editor.gotoLocation.multiple": "goto",
   "editor.lineHeight": 20,
   "editor.lineNumbers": "off",
   "editor.minimap.enabled": false,
   "editor.minimap.renderCharacters": false,
   "editor.parameterHints.enabled": false,
   "editor.quickSuggestions": {
-    "other": true,
     "comments": true,
+    "other": true,
     "strings": true
   },
   "editor.renderIndentGuides": false,
@@ -23,7 +27,12 @@
   "editor.suggest.localityBonus": true,
   "editor.tabCompletion": "on",
   "editor.tabSize": 2,
-  "editor.tokenColorCustomizations": { "[Nord]": { "comments": "#616e88" } },
+  "editor.tokenColorCustomizations": {
+    "[Nord]": {
+      "comments": "#616e88"
+    }
+  },
+  "emmet.showExpandedAbbreviation": "never",
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "files.exclude": {
@@ -43,7 +52,9 @@
   "jest.enableInlineErrorMessages": false,
   "jest.restartJestOnSnapshotUpdate": true,
   "markdown.preview.fontSize": 16,
+  "materialTheme.accent": "Cyan",
   "php.suggest.basic": false,
+  "references.preferredLocation": "view",
   "search.exclude": {
     "**/*.js.snap": true,
     "**/*.ts.snap": true,
@@ -60,46 +71,49 @@
   "vim.leader": ",",
   "vim.normalModeKeyBindings": [
     {
-      "before": ["j"],
-      "after": ["g", "j"]
+      "after": [
+        "g",
+        "j"
+      ],
+      "before": [
+        "j"
+      ]
     },
     {
-      "before": ["k"],
-      "after": ["g", "k"]
+      "after": [
+        "g",
+        "k"
+      ],
+      "before": [
+        "k"
+      ]
     }
   ],
   "window.zoomLevel": 0,
+  "workbench.activityBar.visible": false,
   "workbench.colorCustomizations": {
     "activityBarBadge.background": "#00BCD4",
-    "list.activeSelectionForeground": "#00BCD4",
-    "list.inactiveSelectionForeground": "#00BCD4",
-    "list.highlightForeground": "#00BCD4",
-    "scrollbarSlider.activeBackground": "#00BCD450",
-    "editorSuggestWidget.highlightForeground": "#00BCD4",
-    "textLink.foreground": "#00BCD4",
-    "progressBar.background": "#00BCD4",
-    "pickerGroup.foreground": "#00BCD4",
-    "tab.activeBorder": "#00BCD4",
-    "notificationLink.foreground": "#00BCD4",
-    "editorWidget.resizeBorder": "#00BCD4",
-    "editorWidget.border": "#00BCD4",
-    "settings.modifiedItemIndicator": "#00BCD4",
-    "settings.headerForeground": "#00BCD4",
-    "panelTitle.activeBorder": "#00BCD4",
     "breadcrumb.activeSelectionForeground": "#00BCD4",
+    "editorSuggestWidget.highlightForeground": "#00BCD4",
+    "editorWidget.border": "#00BCD4",
+    "editorWidget.resizeBorder": "#00BCD4",
+    "list.activeSelectionForeground": "#00BCD4",
+    "list.highlightForeground": "#00BCD4",
+    "list.inactiveSelectionForeground": "#00BCD4",
     "menu.selectionForeground": "#00BCD4",
-    "menubar.selectionForeground": "#00BCD4"
+    "menubar.selectionForeground": "#00BCD4",
+    "notificationLink.foreground": "#00BCD4",
+    "panelTitle.activeBorder": "#00BCD4",
+    "pickerGroup.foreground": "#00BCD4",
+    "progressBar.background": "#00BCD4",
+    "scrollbarSlider.activeBackground": "#00BCD450",
+    "settings.headerForeground": "#00BCD4",
+    "settings.modifiedItemIndicator": "#00BCD4",
+    "tab.activeBorder": "#00BCD4",
+    "textLink.foreground": "#00BCD4"
   },
-  "workbench.editor.highlightModifiedTabs": true,
-  "workbench.statusBar.visible": true,
-  "workbench.activityBar.visible": false,
   "workbench.colorTheme": "Material Theme Darker High Contrast",
-  "materialTheme.accent": "Cyan",
+  "workbench.editor.highlightModifiedTabs": true,
   "workbench.iconTheme": "material-icon-theme",
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "editor.gotoLocation.multiple": "goto",
-  "references.preferredLocation": "view",
-  "emmet.showExpandedAbbreviation": "never"
+  "workbench.statusBar.visible": true
 }
