--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ set -g bell-action none
 set -g visual-bell off
 set -g display-panes-time 2000
 set -g mouse on
+set -g set-titles on
+set -g set-titles-string "#{session_name}:#{window_name}"
 
 bind "C-d" detach
 bind "C-t" last-window
@@ -56,13 +58,13 @@ set -g status-interval 0
 set -g status-fg colour240
 set -g status-bg colour233
 set -g status-left "#[fg=colour242] #(uname -n | cut -d. -f1) "
-set -g status-right "#[fg=colour242]:#{session_name}:#{window_index}.#{pane_index} "
+set -g status-right "#[fg=colour242]#(uname -s) :#{session_name}:#{window_index}.#{pane_index} "
 set -g window-status-format "#[bg=colour233,fg=colour240]  ⋅#I⋅ #W "
 set -g window-status-current-format "#[bg=colour233,fg=colour240,nobold] 《#I》#W #[fg=black,bg=colour233,nobold]"
 set -g window-status-separator ""
 set -g status-justify centre
 set -g status-left-length 20
-set -g status-right 20
+set -g status-right-length 30
 set -g display-panes-colour colour233
 set -g display-panes-active-colour colour245
 set -g clock-mode-colour colour39
